--- a/Notebook02-loops_and_decisions.ipynb
+++ b/Notebook02-loops_and_decisions.ipynb
@@ -1584,13 +1584,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MUlleXPsrtrR",
-        "outputId": "bf611034-7e1f-454a-8a19-d92932e8f158"
+        "outputId": "194b3576-74e1-4662-aae1-46e27fcb8b4f"
       },
       "outputs": [
         {
@@ -1614,9 +1614,9 @@
         "  cin >> answer;\n",
         "  switch(answer){\n",
         "\n",
-        "  case 1:\n",
+        "  case 'y':\n",
         "      cout << \"You are OK!\"; break;\n",
-        "  case 2:\n",
+        "  case 'n':\n",
         "      cout << \"You are NOT OK!\"; break;\n",
         "        default:\n",
         "      cout << \"You will be Okay!\";\n",
@@ -1629,28 +1629,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 107,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tV4bW7yFMfat",
-        "outputId": "158fc22b-bd63-42cb-809e-56ff1d982a54"
+        "outputId": "e830437b-3943-48bc-c861-1df7622e24ab"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[01m\u001b[Kch06.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main()\u001b[m\u001b[K’:\n",
-            "\u001b[01m\u001b[Kch06.cpp:12:8:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[K‘\u001b[01m\u001b[Ky\u001b[m\u001b[K’ was not declared in this scope\n",
-            "   12 |   case \u001b[01;31m\u001b[Ky\u001b[m\u001b[K:\n",
-            "      |        \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[Kch06.cpp:14:8:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[K‘\u001b[01m\u001b[Kn\u001b[m\u001b[K’ was not declared in this scope\n",
-            "   14 |   case \u001b[01;31m\u001b[Kn\u001b[m\u001b[K:\n",
-            "      |        \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
             "Are you OK? Type y for yes and n for No\n",
-            "^C\n"
+            "y\n",
+            "You are OK!"
           ]
         }
       ],
